# cremniy

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_ru.md  Qt_Application_Entry_Point_and_Welcome_Window_System_20260614_123113.codemap.txt  README.md  README_ru.md  ROADMAP.md  ROADMAP_ru.md  build.sh  cremniy_canvas.canvas  keyssh  keyssh.pub  promt2.txt  session-ses_134b.md  session-ses_1447.md  нужно ревью проекта и промт.txt
.mimocode/plans/: 1781262733038-misty-sailor.md
docs/RU/: quick_start.md
src/: CMakeLists.txt
src/Agent/: agent_session.cpp  agent_session.h  chat_message.cpp  chat_message.h  chat_panel.cpp  chat_panel.h  conversation_history.cpp  conversation_history.h  endpoint_manager.cpp  endpoint_manager.h  llm_client.cpp  llm_client.h  markdown_highlighter.cpp  markdown_highlighter.h
src/Agent/tools/: agent_tool.h  agent_tools.cpp  agent_tools.h  generate_codemap_tool.cpp  generate_codemap_tool.h  generate_semantic_map_tool.cpp  generate_semantic_map_tool.h  tool_registry.cpp  tool_registry.h
src/SourceBinary/: object_file_indexer.cpp  object_file_indexer.h  source_binary_index.h  source_binary_store.cpp  source_binary_store.h
src/ToolTabs/Canvas/: CMakeLists.txt  canvas_layout.cpp  canvas_layout.h  canvas_view.cpp  canvas_view.h  canvastab.cpp  canvastab.h  cluster_layout.cpp  cluster_layout.h  codemap.cpp  codemap.h  codemap_store.cpp  codemap_store.h  codemap_utils.cpp  codemap_utils.h  dependency_parser.cpp  dependency_parser.h  digest_panel.cpp  digest_panel.h  gource_animator.cpp  gource_animator.h  layer_panel.cpp  layer_panel.h  minimap.cpp  minimap.h  semantic_map.cpp  semantic_map.h  semantic_map_store.cpp  semantic_map_store.h  semantic_map_utils.cpp  semantic_map_utils.h
src/ToolTabs/Canvas/edges/: connection_edge.cpp  connection_edge.h  dependency_edge.cpp  dependency_edge.h
src/ToolTabs/Canvas/nodes/: cluster_group_node.cpp  cluster_group_node.h  file_node.cpp  file_node.h  step_node.cpp  step_node.h
src/ToolTabs/Disassembler/: disassemblertab.cpp  disassemblertab.h
src/app/IDEWindow/: idewindow.cpp  idewindow.h
src/core/: ToolTab.h
src/dialogs/: settingsdialog.cpp  settingsdialog.h
src/resources/: cremniy_res.qrc
src/ui/: filestabwidget.cpp  filestabwidget.h  toolstabwidget.cpp  toolstabwidget.h
src/ui/MenuBar/Menus/Tools/: toolsmenu.cpp  toolsmenu.h
src/utils/: appsettings.cpp  appsettings.h
src/widgets/: filetab.cpp  filetab.h
tests/: CMakeLists.txt  test_codemap.cpp  test_dependency_parser.cpp  test_generate_codemap_tool.cpp  test_generate_semantic_map_tool.cpp  test_semantic_map.cpp
